# getopt-win

./: .gitignore  CMakeLists.txt  README.md  getopt-win-config.cmake.in
Visual Studio Projects/getopt_mb_uni_mfc_vc6/: getopt_mb_uni_mfc_vc6.dsw
Visual Studio Projects/getopt_mb_uni_mfc_vc6/getopt_mb_uni_mfc_vc6/: ReadMe.txt  Resource.h  StdAfx.cpp  StdAfx.h  getopt_mb_uni_mfc_vc6.clw  getopt_mb_uni_mfc_vc6.cpp  getopt_mb_uni_mfc_vc6.dsp  getopt_mb_uni_mfc_vc6.h
Visual Studio Projects/getopt_mb_uni_mfc_vc6/getopt_mb_uni_vc6_dll/: getopt_mb_uni_vc6_dll.dsp
Visual Studio Projects/getopt_mb_uni_mfc_vc6/getopt_mb_uni_vc6_lib/: getopt_mb_uni_vc6_lib.dsp
Visual Studio Projects/getopt_mb_uni_mfc_vc8/: getopt_mb_uni_mfc_vc8.sln
Visual Studio Projects/getopt_mb_uni_mfc_vc8/getopt_mb_uni_mfc_vc8/: ReadMe.txt  Resource.h  getopt_mb_uni_mfc_vc8.cpp  getopt_mb_uni_mfc_vc8.rc  getopt_mb_uni_mfc_vc8.vcproj  stdafx.cpp  stdafx.h
Visual Studio Projects/getopt_mb_uni_mfc_vc8/getopt_mb_uni_vc8_dll/: getopt_mb_uni_vc8_dll.vcproj
Visual Studio Projects/getopt_mb_uni_mfc_vc9/: getopt_mb_uni_vc9.sln
Visual Studio Projects/getopt_mb_uni_mfc_vc9/getopt_mb_uni_mfc_vc9/: ReadMe.txt  Resource.h  getopt_mb_uni_mfc_vc9.cpp  getopt_mb_uni_mfc_vc9.rc  getopt_mb_uni_mfc_vc9.vcproj  stdafx.cpp
Visual Studio Projects/getopt_mb_uni_mfc_vc9/getopt_mb_uni_vc9_dll/: getopt_mb_uni_vc9_dll.vcproj
Visual Studio Projects/getopt_mb_uni_vc10/: getopt_mb_uni_vc10.sln
Visual Studio Projects/getopt_mb_uni_vc10/getopt_mb_uni_vc10/: getopt_mb_uni_vc10.vcxproj  main.c
Visual Studio Projects/getopt_mb_uni_vc10/getopt_mb_uni_vc10_dll/: getopt_mb_uni_vc10_dll.vcxproj
Visual Studio Projects/getopt_mb_uni_vc17/: getopt_mb_uni_vc17.sln
Visual Studio Projects/getopt_mb_uni_vc17/getopt_mb_uni_vc17/: getopt_mb_uni_vc17.vcxproj  main.c
Visual Studio Projects/getopt_mb_uni_vc17/getopt_mb_uni_vc17_dll/: getopt_mb_uni_vc17_dll.vcxproj
Visual Studio Projects/getopt_mb_uni_vc6/: getopt_mb_uni_vc6.dsw
Visual Studio Projects/getopt_mb_uni_vc6/getopt_mb_uni_vc6/: getopt_mb_uni_vc6.dsp
Visual Studio Projects/getopt_mb_uni_vc6/getopt_mb_uni_vc6_dll/: getopt_mb_uni_vc6_dll.dsp
Visual Studio Projects/getopt_mb_uni_vc6/getopt_mb_uni_vc6_lib/: getopt_mb_uni_vc6_lib.dsp
Visual Studio Projects/getopt_mb_uni_vc8/: getopt_mb_uni_vc8.sln
Visual Studio Projects/getopt_mb_uni_vc8/getopt_mb_uni_vc8/: getopt_mb_uni_vc8.vcproj
Visual Studio Projects/getopt_mb_uni_vc9/: getopt_mb_uni_vc9.sln
Visual Studio Projects/getopt_mb_uni_vc9/getopt_mb_uni_vc9/: getopt_mb_uni_vc9.vcproj
src/: main.c
